envoy/envoy.yaml
# yaml-language-server: $schema=https://github.com/jcchavezs/envoy-config-schema/releases/download/v1.21.0/v3_Bootstrap.json
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: ddn_route
                      domains: ["*"]
                      routes:
                        - match:
                            safe_regex:
                              regex: ^/[a-zA-Z0-9]+/[a-zA-Z0-9]+/.+
                          route:
                            host_rewrite_path_regex:
                              pattern:
                                regex: "^/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)/.+$"
                              substitution: \1-\2.envoyproxy.io
                            cluster: service_envoyproxy_io
                            regex_rewrite:
                              pattern:
                                regex: ^/([a-zA-Z0-9]+)/([a-zA-Z0-9]+)/(.+)
                              substitution: /\3
                        - match:
                            safe_regex:
                              regex: ^/[a-zA-Z0-9]+/.+
                          route:
                            host_rewrite_path_regex:
                              pattern:
                                regex: "^/([a-zA-Z0-9]+)/.+$"
                              substitution: \1.envoyproxy.io
                            cluster: service_envoyproxy_io
                            regex_rewrite:
                              pattern:
                                regex: ^/([a-zA-Z0-9]+)/(.+)
                              substitution: /\2

  clusters:
    - name: service_envoyproxy_io
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: service_envoyproxy_io
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app
                      port_value: 4200
